--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                     aria-label="Slide 3"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
                     aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
             </div>
              <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -104,6 +106,16 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h1>Interiour</h1>
                         <p>Interior designers make interior spaces functional, safe, and beautiful for almost every type of building. Interior designers make indoor spaces functional, safe, and beautiful by determining space requirements and selecting essential and decorative items, such as colors, lighting, and materials.</p>
+                        <div class="slider-btn">
+                            <a href="#" class="btn">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/mep.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>MEP</h1>
+                        <p>Mechanical, electrical and plumbing (MEP) refers to these aspects of building design and construction. In commercial buildings, these elements are often designed by a specialized engineering firm.</p>
                         <div class="slider-btn">
                             <a href="#" class="btn">Read More</a>
                         </div>
