--- a/contact_us.html
+++ b/contact_us.html
@@ -61,9 +61,9 @@
         <h3 class="heading">Contact <span class="sub">With</span> Us</h3>
         <div class="container contact_container">
             <div class="left">
-                <a href="#"><i class="fa-solid fa-location-dot"></i><span class="content">Webel IT Park at Durgapur, West Bengal</span></a>
+                <a href="#"><i class="fa-solid fa-location-dot"></i><span class="content">India</span></a>
                 <a href="mailto: info@beyondbimtechnologies.com"><i class="fa-solid fa-envelope"></i><span class="content">info@beyondbimtechnologies.com</span></a>
-                <a href="tel: 0 000 00000"><i class="fa-solid fa-phone"></i><span class="content">0 000 00000</span></a>
+                <a href="tel:+974 70448925"><i class="fa-solid fa-phone"></i><span class="content">+974 70448925</span></a>
                 <a href="beyondbimtechnologies.com"><i class="fa-brands fa-chrome"></i><span class="content">beyondbimtechnologies.com</span></a>
             </div>
             <form action="#" class="right contact_form">
