--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="carousel-item">
                     <img src="./images/PPT_PIC/02.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1>Interiour</h1>
+                        <h1>Interior</h1>
                         <p>Interior designers make interior spaces functional, safe, and beautiful for almost every type of building. Interior designers make indoor spaces functional, safe, and beautiful by determining space requirements and selecting essential and decorative items, such as colors, lighting, and materials.</p>
                         <div class="slider-btn">
                             <a href="#" class="btn">Read More</a>
